<resources>
    <string name="app_name">demoMiniClerkie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="secret_tools">Hi!</string>
    <string name="to_master_debt">Welcome to my \nmini Clerkie app</string>

    <string name="view_fullscreen">View Fullscreen</string>
    <string name="view_popup">View Popup</string>
    <string name="transition_right">Transition Right</string>

    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="get_started">Get Started</string>

    <string name="fifteen">$15</string>
    <string name="twentyfive">$25</string>
    <string name="fifty">$50</string>
    <string name="confrim">Confirm</string>
</resources>