<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_dialog_bg"
    tools:context=".ui.main.PopupFragment">

    <TextView
        android:id="@+id/amount_heading_Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"/>

    <RadioGroup
        android:id="@+id/amountRadioGroup"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_heading_Textview">

        <RadioButton
            android:id="@+id/amount_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="130dp"
            android:text="@string/fifteen"
            android:paddingLeft="15dp"
            android:textSize="12sp"
            android:checked="true"
            android:textColor="@color/white"
            android:background="@drawable/mint_green_circle"
            android:button="@android:color/transparent"/>
        <RadioButton
            android:id="@+id/amount_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyfive"
            android:paddingLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="12sp"
            android:textColor="@color/light_green"
            android:background="@drawable/grey_circle"
            android:button="@android:color/transparent"/>
        <RadioButton
            android:id="@+id/amount_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty"
            android:paddingLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="12sp"
            android:textColor="@color/light_green"
            android:background="@drawable/grey_circle"
            android:button="@android:color/transparent"/>

    </RadioGroup>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg_green"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/confrim"
        android:textAllCaps="false"
        android:textColor="@color/mint_green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>